fix(wink-nlp): increase the contrast of the comments in code

--- a/source/wink-nlp/styles/prettify.css
+++ b/source/wink-nlp/styles/prettify.css
@@ -14,7 +14,7 @@
 
 /* a comment */
 .com {
-  color: #5c6370;
+  color: #7e8492;
   font-style: italic;
 }
 
